public class ProductExcavator implements Tool{
    @Override
    public String dig() {
        return "Excavator used to digging the field";
    }
}
