@startuml
'https://plantuml.com/class-diagram

abstract class Excavate {
+ void excavating()
+ abstract Tool usingTool()
}
class Main {
+ {static} void main(String[] args)
~ {static} void configure(String selected)
~ {static} void startDigging()
}

interface Tool {
String Dig()
}

class productShovel {
String Dig()
}

class productExcavator {
String Dig()
}

Tool <|-- productShovel
'abstract class AbstractList
'abstract AbstractCollection
'interface List
'interface Collection
'
'List <|-- AbstractList
'Collection <|-- AbstractCollection
'
'Collection <|- List
'AbstractCollection <|- AbstractList
'AbstractList <|-- ArrayList
'
'class ArrayList {
'Object[] elementData
'size()
'}
'
'enum TimeUnit {
'DAYS
'HOURS
'MINUTES
'}

@enduml